--------------------------------------------------------------------------------
Changes for 1.9.8

New features:
 - [ZBX-3271] implements the _x() and _xn() function for context dependent translations (pavels,Richlv,Vedmak)
 - [ZBX-3498] removed items from unmonitored hosts from the 'Add graph' and 'Add simple graph' pop-ups in the 'Favourite graphs' widget (pavels)
 - [ZBX-3498] removed the 'Status' column from the 'Add simple graph' pop-up (pavels)
 - [ZBXNEXT-1019] updated jQuery to 1.7 (Vedmak)
 - [ZBX-1357] added initial Greek translation (Richlv)
 - [ZBXNEXT-911] redesign Configuration->Web (Eduard)
 - [ZBXNEXT-579] added support for vfs.fs.discovery (with both {#FSNAME} and {#FSTYPE}) on FreeBSD, NetBSD and OpenBSD (asaveljevs)
 - [ZBXNEXT-580] added support for {#FSTYPE} for vfs.fs.discovery on AIX, HP-UX, Linux, Solaris and Windows (asaveljevs)
 - [ZBX-3074] moved the 'Status' column in the item list to the left (pavels)
 - [ZBX-1357] updated Brazilian Portuguese and Russian translations; thanks to Zabbix translators (Richlv)
 - [ZBX-2960] added example userparameter for partition discovery on Linux (Richlv)

Bug fixes:
 - [ZBX-4297] fixed error in top 100 triggers report (Vedmak)
 - [ZBX-4258] fixed link to the template prototype item in the caption of the item editing form (pavels)
 - [ZBX-3510] fixed discovery and it's prototype cloning when cloning a host or template (pavels)
 - [ZBX-3674] fixed possible editing of lld created elements (Vedmak)
 - [ZBX-3113] made nanoseconds patch mandatory for upgrading from 1.8 to 2.0 (asaveljevs)
 - [ZBX-3468] fixed error messages and warnings with enabled SQLite3 support in front-end (Alexei)
 - [ZBX-4056] fixed dependencies not added when template linked to host (Vedmak)
 - [ZBX-4315] fixed the 'close' link in the tooltips (pavels)
 - [ZBX-3675] fixed items created via api for template have wrong interfaceid on linked host (Vedmak)
 - [ZBX-4212] fixed creation of trigger expression with "])" in item key (Vedmak)